# kaufland-sync

./: .dockerignore  .gitignore
deployment/: db-secret.yaml.example  fleet.yaml  jiri-models-feed-configmap.yaml  jiri-models-feed-cronjob.yaml  jiri-models-feed-stock-updater-cronjob.yaml  jiri-models-stock-updater-cronjob.yaml  jirimodels-offer-stock-updater-configmap.yaml  jirimodels-offer-stock-updater-cronjob.yaml  kaufland-api-configmap.yaml  kaufland-api-secret.yaml.example  kaufland-stock-updater-cronjob.yaml  kaufland-unit-mapper-cronjob.yaml  registry-secret.yaml  registry-secret.yaml.example  shoptet-catalog-ingester-configmap.yaml  shoptet-catalog-ingester-cronjob.yaml  shoptet-offer-stock-updater-configmap.yaml  shoptet-offer-stock-updater-cronjob.yaml  shoptet-stock-updater-cronjob.yaml  shoptet-unit-mapper-cronjob.yaml
jirimodels-offer-stock-updater/: Dockerfile  build-and-push.sh  kaufland_api_client.py  main.py  requirements.txt
libs/kaufland-rest-api/: pyproject.toml
libs/kaufland-rest-api/kaufland_rest_api/: __init__.py  client.py
libs/shared-db/: pyproject.toml  schema.sql
libs/shared-db/shared_db/: __init__.py  config.py  models.py  session.py  trace_log.py
libs/shared-db/shared_db/dao/: __init__.py  jiri_models_feed.py  job_state.py  kaufland_mapping.py  shoptet_stock.py
services/jiri-models-feed/: Dockerfile  build-and-push.sh  main.py  (+1 more)
services/jiri-models-feed-stock-updater/: Dockerfile  build-and-push.sh  main.py  prepare-env.sh
shoptet-offer-stock-updater/: Dockerfile  build-and-push.sh  kaufland_api_client.py  main.py
(+29 files in other folders)
