[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaufland-rest-api"
version = "0.1.0"
description = "Kaufland REST API client library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.0",
]

[tool.setuptools]
packages = ["kaufland_rest_api"]
