[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-db"
version = "0.1.1"
description = "Shared database library for Shoptet Marketplace Sync"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=1.4.0,<2.0.0",
    "mariadb>=1.1.0",
    "pymysql>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["shared_db"]
